@@ -26,26 +26,34 @@ public class ProductServiceImpl implements ProductService {
     }
 
     public void saveProduct(Product product, MultipartFile file1, MultipartFile file2, MultipartFile file3) throws IOException {
-        Image image1;
-        Image image2;
-        Image image3;
-        if (file1.getSize() != 0) {
-            image1 = toImageEntity(file1);
+        // Проверка на null продукта
+        if (product == null) {
+            throw new IllegalArgumentException("Product cannot be null");
+        }
+
+        // Добавление изображений
+        if (file1 != null && !file1.isEmpty()) {
+            Image image1 = toImageEntity(file1);
             image1.setPreviewImage(true);
             product.addImageToProduct(image1);
         }
-        if (file2.getSize() != 0) {
-            image2 = toImageEntity(file2);
-            product.addImageToProduct(image2);
+        if (file2 != null && !file2.isEmpty()) {
+            product.addImageToProduct(toImageEntity(file2));
         }
-        if (file3.getSize() != 0) {
-            image3 = toImageEntity(file3);
-            product.addImageToProduct(image3);
+        if (file3 != null && !file3.isEmpty()) {
+            product.addImageToProduct(toImageEntity(file3));
         }
+
         log.info("Saving new Product. Title: {}; Author: {}", product.getTitle(), product.getAuthor());
-        Product productFromDB = productRepository.save(product);
-        productFromDB.setPreviewImageId(productFromDB.getImages().getFirst().getId());
-        productRepository.save(product);
+
+        // Первое сохранение продукта
+        Product savedProduct = productRepository.save(product);
+
+        // Если есть изображения, устанавливаем previewImageId и сохраняем снова
+        if (!savedProduct.getImages().isEmpty()) {
+            savedProduct.setPreviewImageId(savedProduct.getImages().get(0).getId());
+            productRepository.save(savedProduct);
+        }
     }
 
     private Image toImageEntity(MultipartFile file) throws IOException {
